# xylem

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  NOTICE  README.md  build.sh  inspect_db.py  library.json
docs/: README.md  SUMMARY.md
docs/1-getting-started/: README.md  installation.md  quickstart-examples.md
docs/2-core-features/: README.md  blob-store-and-cas.md  graph-traversal.md  mvcc-and-transactions.md  pubsub-and-virtual-columns.md  security-and-encryption.md  vector-search-hnsw.md
docs/3-advanced-usage/: README.md  query-language-and-cli.md  query-overlays-and-hooks.md  raw-pinning-and-bootloaders.md  tree-typed-columns.md
docs/4-architecture/: README.md  internal-structure.md
include/Xylem/: Allocator.hpp  BlobStore.hpp  BlockDevice.hpp  Cache.hpp  Client.hpp  CryptItem.hpp  Format.hpp  HNSW.hpp  Journal.hpp  Query.hpp  QueryParser.hpp  Server.hpp  TableStore.hpp  Watcher.hpp  XBDiff.hpp  Xylem.hpp
src/: xy.cpp
src/Xylem/: Allocator.cpp  BlobStore.cpp  BlockDevice.cpp  Cache.cpp  Client.cpp  Journal.cpp  QueryParser.cpp  Server.cpp  TableStore.cpp  Watcher.cpp  XBDiff.cpp  Xylem.cpp
tests/: main.cpp  network_test.cpp  rigorous_test.cpp  test_crypto.cpp  test_wildcard.cpp  test_xbdiff.cpp
